name:               lam
version:            0.1
synopsis:           Yet another lambda calculus language.
license:            MIT
license-file:       LICENSE.md
author:             Mitchell Kember
maintainer:         mk12360@gmail.com
copyright:          Copyright 2015 Mitchell Kember
category:           Math
build-type:         Simple
extra-source-files: README.md
cabal-version:      >=1.10
tested-with:        GHC==7.8.3

source-repository head
  Type:     git
  Location: git://github.com/mk12/lam.git

executable lam
  main-is:          Main.hs
  other-modules:    Lam.Eval Lam.Parse Lam.Repl
  build-depends:    base >=4.7 && <4.8, containers, directory, errors,
                    haskeline, parsec, split, transformers
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall -Werror
